EDA Update for cut

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4   4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "freq     92454   44391   53272"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
     "cut_map = {\n",
     "    'Fair': 1,\n",
     "    'Good': 2,\n",
-    "    'very Good': 3,\n",
+    "    'Very Good': 3,\n",
     "    'Premium': 4,\n",
     "    'Ideal': 5\n",
     "}\n",
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1.52</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>62.2</td>\n",
@@ -822,7 +822,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2.03</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
        "      <td>7</td>\n",
        "      <td>2</td>\n",
        "      <td>62.0</td>\n",
@@ -835,7 +835,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.70</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>61.2</td>\n",
@@ -848,7 +848,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.32</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>61.6</td>\n",
@@ -861,7 +861,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1.70</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>62.6</td>\n",
@@ -877,14 +877,14 @@
       ],
       "text/plain": [
        "   carat  cut  color  clarity  depth  table     x     y     z  price\n",
-       "0   1.52  4.0      3        4   62.2   58.0  7.27  7.33  4.55  13619\n",
-       "1   2.03  NaN      7        2   62.0   58.0  8.06  8.12  5.05  13387\n",
-       "2   0.70  5.0      4        5   61.2   57.0  5.69  5.73  3.50   2772\n",
-       "3   0.32  5.0      4        5   61.6   56.0  4.38  4.41  2.71    666\n",
-       "4   1.70  4.0      4        4   62.6   59.0  7.65  7.61  4.77  14453"
+       "0   1.52    4      3        4   62.2   58.0  7.27  7.33  4.55  13619\n",
+       "1   2.03    3      7        2   62.0   58.0  8.06  8.12  5.05  13387\n",
+       "2   0.70    5      4        5   61.2   57.0  5.69  5.73  3.50   2772\n",
+       "3   0.32    5      4        5   61.6   56.0  4.38  4.41  2.71    666\n",
+       "4   1.70    4      4        4   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
