--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4   4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "[193573 rows x 9 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "[193573 rows x 1 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "4             2.144670               1.352731  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
        "4            -0.935071               0.686225  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,19 +1008,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.float64' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[42], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[39m# make prediction\u001b[39;00m\n\u001b[0;32m     16\u001b[0m y_pred \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpredict(X_test)\n\u001b[1;32m---> 18\u001b[0m mae, rmse, r2_score \u001b[39m=\u001b[39m evaluate_model(y_test, y_pred)\n\u001b[0;32m     20\u001b[0m model_list\u001b[39m.\u001b[39mappend(key)\n\u001b[0;32m     21\u001b[0m \u001b[39mprint\u001b[39m(key)\n",
-      "Cell \u001b[1;32mIn[41], line 8\u001b[0m, in \u001b[0;36mevaluate_model\u001b[1;34m(true, predicted)\u001b[0m\n\u001b[0;32m      6\u001b[0m mse \u001b[39m=\u001b[39m mean_squared_error(true, predicted)\n\u001b[0;32m      7\u001b[0m rmse \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msqrt(mse)\n\u001b[1;32m----> 8\u001b[0m r2 \u001b[39m=\u001b[39m r2_score(true, predicted)\n\u001b[0;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m mae, rmse, r2\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression\n",
+      "Model Training Performance: \n",
+      "\tMean Absolute Error: 674.0255115796832\n",
+      "\tRoot Mean Squared Error: 1013.9047094344004\n",
+      "\tR2 Score: 93.68908248567512\n",
+      "===================================\n",
+      "Lasso\n",
+      "Model Training Performance: \n",
+      "\tMean Absolute Error: 675.0716923362162\n",
+      "\tRoot Mean Squared Error: 1013.8784226767013\n",
+      "\tR2 Score: 93.68940971841704\n",
+      "===================================\n",
+      "Ridge\n",
+      "Model Training Performance: \n",
+      "\tMean Absolute Error: 674.0555800798253\n",
+      "\tRoot Mean Squared Error: 1013.9059272771639\n",
+      "\tR2 Score: 93.68906732505938\n",
+      "===================================\n",
+      "ElasticNet\n",
+      "Model Training Performance: \n",
+      "\tMean Absolute Error: 1060.7368759154729\n",
+      "\tRoot Mean Squared Error: 1533.4162456064048\n",
+      "\tR2 Score: 85.56494831165182\n",
+      "===================================\n"
      ]
     }
    ],
@@ -1042,20 +1060,20 @@
     "    # make prediction\n",
     "    y_pred = model.predict(X_test)\n",
     "\n",
-    "    mae, rmse, r2_score = evaluate_model(y_test, y_pred)\n",
+    "    mae, rmse, r2 = evaluate_model(y_test, y_pred)\n",
     "\n",
     "    model_list.append(key)\n",
     "    print(key)\n",
-    "    print('\\n')\n",
+    "    # print('\\n')\n",
     "\n",
     "    print('Model Training Performance: ')\n",
     "    print('\\tMean Absolute Error:', mae)\n",
     "    print('\\tRoot Mean Squared Error:', rmse)\n",
-    "    print('\\tR2 Score:', r2_score*100)\n",
+    "    print('\\tR2 Score:', (r2)*100)\n",
     "\n",
-    "    model_score.append(r2_score)\n",
+    "    model_score.append(r2)\n",
     "    print(\"=\"*35)\n",
-    "    print('\\n')"
+    "    # print('\\n')"
    ]
   },
   {
