--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -1078,6 +1078,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: LinearRegression, Score: 0.9368908248567511\n",
+      "Model: Lasso, Score: 0.9368940971841704\n",
+      "Model: Ridge, Score: 0.9368906732505938\n",
+      "Model: ElasticNet, Score: 0.8556494831165181\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model, score in zip(model_list, model_score):\n",
+    "    print(f\"Model: {model}, Score: {score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
